[gd_scene load_steps=9 format=2]

[ext_resource path="res://Start and End/526200.png" type="Texture" id=1]
[ext_resource path="res://Text/Splatch.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Text/Start.png" type="Texture" id=3]
[ext_resource path="res://Text/Start2.png" type="Texture" id=4]
[ext_resource path="res://Start and End/StartGame.gd" type="Script" id=5]
[ext_resource path="res://Musica de Fondo/videoplayback.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.341176, 0.827451, 0.737255, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[node name="StartGame" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 540.354, 312.85 )
scale = Vector2( 0.305929, 0.318781 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 263.003
margin_top = 38.5654
margin_right = 1011.0
margin_bottom = 260.565
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.0313726, 0.984314, 0.831373, 1 )
custom_colors/selection_color = Color( 0.313726, 0.909804, 0.839216, 1 )
custom_colors/font_color_selected = Color( 0.529412, 0.145098, 0.145098, 1 )
text = "EL MARCIANITO"
scroll_active = false

[node name="StartGame" type="TextureButton" parent="."]
margin_left = 437.0
margin_top = 229.0
margin_right = 719.0
margin_bottom = 317.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
script = ExtResource( 5 )

[node name="Label" type="Label" parent="StartGame"]
margin_left = 50.9266
margin_top = 6.49268
margin_right = 252.927
margin_bottom = 80.4927
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.247059, 0.815686, 0.87451, 1 )
text = "JUGAR"

[node name="Option" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 439.0
margin_top = 332.0
margin_right = 723.0
margin_bottom = 424.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Option"]
margin_left = 12.5124
margin_top = 6.49268
margin_right = 265.512
margin_bottom = 80.4927
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.247059, 0.815686, 0.87451, 1 )
text = "OPCIONES"

[node name="Exit" type="TextureButton" parent="."]
editor/display_folded = true
margin_left = 440.0
margin_top = 441.0
margin_right = 725.0
margin_bottom = 535.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Exit"]
margin_left = 71.0105
margin_top = 4.98947
margin_right = 210.01
margin_bottom = 78.9895
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.247059, 0.815686, 0.87451, 1 )
text = "SALIR"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
[connection signal="pressed" from="StartGame" to="StartGame" method="_on_StartGame_pressed"]
[connection signal="pressed" from="Option" to="Option" method="_on_Option_pressed"]
[connection signal="pressed" from="Exit" to="Exit" method="_on_Exit_pressed"]
